# tari-tapplet-lib

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: git_tapplet.rs  host.rs  lib.rs  local_folder_lua_tapplet.rs  local_folder_tapplet.rs  registry.rs
src/model/: example-tapplet.toml  mod.rs
