[package]
name = "tari-tapplet-lib"
version = "0.1.0"
edition = "2024"

[features]
default = []
host = ["wasmer", "mlua"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
wasmer = { version = "4.3", optional = true }
mlua = { version = "0.10", features = [
    "luau",
    "vendored",
    "anyhow",
], optional = true }
serde_json = "1.0"
git2 = "0.19"
tokio = { version = "1.0", features = ["rt", "macros"] }
walkdir = "2.5"
anyhow = "1.0.100"
async-trait = "0.1.89"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_System_Threading",
] }
